--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -20,7 +20,7 @@
                         <ion-list>
                             <ion-item>
                                 <ion-label position="floating">E-Mail</ion-label>
-                                <ion-input type="email" [(ngModel)]="user.data.email" name="email" required></ion-input>
+                                <ion-input type="email" [(ngModel)]="user.data.username" name="email" required></ion-input>
                             </ion-item>
                             <ion-item>
                                 <ion-label position="floating">Password</ion-label>
