login, seeker and volunteer form finished

--- a/web/src/app/auth/login/login.page.html
+++ b/web/src/app/auth/login/login.page.html
@@ -45,5 +45,5 @@
             </div>
         </div>
     </ion-card>
-    <pre>{{user | json}}</pre>
+    <!-- <pre>{{user | json}}</pre> -->
 </ion-content>
