--- a/web/src/app/auth/registration/scribe-seeker/scribe-seeker.page.html
+++ b/web/src/app/auth/registration/scribe-seeker/scribe-seeker.page.html
@@ -1,54 +1,54 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="login"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Seeker Registration</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="login"></ion-back-button>
+        </ion-buttons>
+        <ion-title>Seeker Registration</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card>
-    <form [formGroup]="registrationForm" (ngSubmit)="onRegistrationSubmission()">
-      <ion-grid>
-        <ion-row>
-          <ion-col size-sm="6" offset-sm="3">
-            <ion-item>
-              <ion-label position="floating">Name</ion-label>
-              <ion-input type="text" formControlName="name"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size-sm="6" offset-sm="3">
-            <ion-item>
-              <ion-label position="floating">E-Mail</ion-label>
-              <ion-input type="email" formControlName="email"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col formGroupName="passwords" class="passwords_wrapper">
-            <ion-row>
-              <ion-col size-sm="6" offset-sm="3">
-                <ion-item>
-                  <ion-label position="floating">Password</ion-label>
-                  <ion-input type="password" formControlName="password"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col size-sm="6" offset-sm="3">
-                <ion-item>
-                  <ion-label position="floating">Confirm Password</ion-label>
-                  <ion-input type="password" formControlName="confirmPassword"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <p class="error-msg" *ngIf="registrationForm.get('passwords').get('password').value.trim() && registrationForm.get('passwords').get('confirmPassword')?.value.trim() && !registrationForm.get('passwords').valid">Password and confirm passwords are not matching.</p>
-          </ion-col>
-        </ion-row>
-          <ion-row>
+    <ion-card>
+        <form [formGroup]="registrationForm" (ngSubmit)="onRegistrationSubmission()">
+            <ion-grid>
+                <ion-row>
+                    <ion-col size-sm="6" offset-sm="3">
+                        <ion-item>
+                            <ion-label position="floating">Name</ion-label>
+                            <ion-input type="text" formControlName="name"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col size-sm="6" offset-sm="3">
+                        <ion-item>
+                            <ion-label position="floating">E-Mail</ion-label>
+                            <ion-input type="email" formControlName="email"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col formGroupName="passwords" class="passwords_wrapper">
+                        <ion-row>
+                            <ion-col size-sm="6" offset-sm="3">
+                                <ion-item>
+                                    <ion-label position="floating">Password</ion-label>
+                                    <ion-input type="password" formControlName="password"></ion-input>
+                                </ion-item>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row>
+                            <ion-col size-sm="6" offset-sm="3">
+                                <ion-item>
+                                    <ion-label position="floating">Confirm Password</ion-label>
+                                    <ion-input type="password" formControlName="confirmPassword"></ion-input>
+                                </ion-item>
+                            </ion-col>
+                        </ion-row>
+                        <p class="error-msg" *ngIf="registrationForm.get('passwords').get('password').value.trim() && registrationForm.get('passwords').get('confirmPassword')?.value.trim() && !registrationForm.get('passwords').valid">Password and confirm passwords are not matching.</p>
+                    </ion-col>
+                </ion-row>
+                <!-- <ion-row>
           <ion-col size-sm="6" offset-sm="3">
             <ion-item>
               <ion-label position="floating">Gender</ion-label>
@@ -59,30 +59,30 @@
               </ion-select>
             </ion-item>
           </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size-sm="6" offset-sm="3">
-            <ion-item>
-              <ion-label position="floating">Mobile Number</ion-label>
-              <ion-input type="tel" formControlName="mobileno"></ion-input>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
+        </ion-row> -->
+                <ion-row>
+                    <ion-col size-sm="6" offset-sm="3">
+                        <ion-item>
+                            <ion-label position="floating">Mobile Number</ion-label>
+                            <ion-input type="tel" formControlName="mobileno"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+                <!-- <ion-row>
           <ion-col size-sm="6" offset-sm="3">
             <ion-item>
               <ion-label position="floating">Languages Known</ion-label>
               <ion-textarea rows="3" formControlName="languagesKnown" autocorrect></ion-textarea>
             </ion-item>
           </ion-col>
-        </ion-row>
-        <ion-row class="ion-justify-content-evenly">
-          <ion-col size-sm="6" offset-sm="3">
-            <ion-button type="reset" color="secondary" size="small" fill="outline">Reset</ion-button>
-            <ion-button type="submit" color="primary" size="small">Register</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </form>
-  </ion-card>
+        </ion-row> -->
+                <ion-row class="ion-justify-content-evenly">
+                    <ion-col size-sm="6" offset-sm="3">
+                        <ion-button type="reset" color="secondary" size="small" fill="outline">Reset</ion-button>
+                        <ion-button type="submit" color="primary" size="small">Register</ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </form>
+    </ion-card>
 </ion-content>
